<resources>
    <string name="app_name">Stephens City Virtual Historical Tour</string>
    <string name="splashScreenTitleP1">Stephens City</string>
    <string name="splashScreenTitleP2">Virtual Historical Tour</string>
    <string name="splashScreenTitleP3">Do Not Interact With Device While Operating Vehicle</string>
    <string name="splashImageContentDescription">Newtown History Center logo</string>
    <string name="infoPageButton">Back to Map</string>
    <string name="test">test test test test test test</string>
    <string name="test2">test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
