<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="han.svuspiral.phonetoad.SplashActivity">

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/p1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/economica"
            android:text="@string/splashScreenTitleP1"
            android:textAlignment="center"
            android:textColor="@color/splashTextColorRed"
            android:textSize="80sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <TextView
            android:id="@+id/p2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/economica"
            android:text="@string/splashScreenTitleP2"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/splashTextColorBlue"
            android:textSize="58sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/p3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:color="@color/regularText"
            android:fontFamily="@font/lora"
            android:text="@string/splashScreenTitleP3"
            android:textAlignment="center"
            android:textSize="28sp"
            android:textStyle="italic"
            android:visibility="visible" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
